新增了Aion链上ABI返回异常捕获类 完善了异常抛出